# libaws

./: Cargo.toml  pyproject.toml
.github/workflows/: release.yml
python/libaws/: __init__.py
src/: lambda.rs  lib.rs  s3.rs
