[package]
name = "libaws"
version = "0.1.0"
edition = "2021"

[lib]
name = "libaws"
crate-type = ["cdylib"]

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.24.0"
pyo3 = { version = "0.21.1", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
