[package]
name = "libpss-aws"
version = "0.2.2"
edition = "2021"

[lib]
name = "libpss_aws"
crate-type = ["cdylib"]

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.24.0"
aws-sdk-lambda = "1.22.0"
aws-smithy-types = "1.1.8"
pyo3 = { version = "0.21.1", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
