[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "libpss-aws"
version = "0.2.1"
description = ""

[project.urls]
Repository = "https://github.com/precision-safe-sidewalks/libaws.git"
Issues = "https://github.com/precision-safe-sidewalks/libaws/issues"

[tool.maturin]
python-source = "python"
module-name = "libpss_aws.libpss_aws"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"python/libaws/**/__init__.py" = ["F401"]
